# credify

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.Docker.md  README.md  brainstrom.txt  check_students.py  commit_msg.txt  diff.txt  docker-compose.yml  main.py  notes.md  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt  run_tests.sh  solution.txt  test_blockchain.py  test_mail.py  test_results.txt
.github/: ci.yml
app/: __init__.py  app.py  auth.py  config.py  models.py  user_flags.py
core/: __init__.py  blockchain.py  credential_manager.py  crypto_utils.py  ipfs_client.py  logger.py  mailer.py  ticket_manager.py  zkp_manager.py
docs/: API_REFERENCE.md  AUTHENTICATION_GUIDE.md  DOCKER_DEPLOYMENT.md  Description.md  ENGINEERING_SPECS.md  PROJECT_OVERVIEW.md  ROADMAP.md  SECURITY_ARCHITECTURE.md  STORY_TIME.md  TROUBLESHOOTING.md  TUTORIAL.md
qr-web-app/: app.js  index.html  style.css
report/: DIAGRAM_PROMPTS.md  abstract.txt  content.txt  projectreport_main.txt
scripts/: create_admin.py  create_student.py  deploy.sh  health_check.sh  reset_system.py
static/: app.js  style.css
templates/: activation_result.html  base.html  certificate_view.html  holder.html  index.html  issuer.html  login.html  mfa_setup.html  rejection_reason.html  reset_password.html  setup_account.html  tutorial.html  verifier.html  verify.html
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_auth.py  test_block_explorer.py  test_block_validation.py  test_blockchain.py  test_credential_manager.py  (+11 more)
(+14 files in other folders)
