[tool.poetry]
name = "blockchain-credential-system"
version = "1.0.0"
description = "Blockchain-Based Verifiable Academic Credential System with Zero-Knowledge Proofs"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
werkzeug = "^3.0.0"
cryptography = "^41.0.0"
ipfshttpclient = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-flask = "^1.3.0"
black = "^23.9.0"
flake8 = "^6.1.0"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=app --cov=core --cov-report=html --cov-report=term"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
